fix message overflow glitch

--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -724,6 +724,22 @@ video {
   max-width: 20rem;
 }
 
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[50vw\] {
+  max-width: 50vw;
+}
+
+.max-w-\[60vw\] {
+  max-width: 60vw;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -818,6 +834,10 @@ video {
 
 .text-ellipsis {
   text-overflow: ellipsis;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded-full {
@@ -1377,6 +1397,10 @@ video {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:max-w-xs {
+    max-width: 20rem;
   }
 
   .md\:flex-row {
